...
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="error_required">Required</string>
    <string name="error_invalid_username_password">Invalid username/password</string>
    <string name="title_user_list">Users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="users_title">Users</string>
    <string name="username_help">Enter \"username\"</string>
    <string name="password_help">Enter \"password\"</string>
</resources>
